--- a/index.html
+++ b/index.html
@@ -1,47 +1,65 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - final with drop down</title>
+  <link rel="stylesheet" href="./style.css">
 
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MvisCBA - Insurance Claims and Fraud Detection</title>
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MvisCBA - Insurance Claims and Fraud Detection</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="main-header">
-  <div class="container header-container">
-    <img src="https://i.ibb.co/0F4XSjc/Mvis-CBA-Logo.jpg" alt="MvisCBA Logo" class="logo">
-    <div class="title-container">
-      <h1>MvisCBA</h1>
-      <p class="subtitle">Multi-Modal Visualization System to Understand Customer Adverse Behavior</p>
+    <div class="container header-container">
+        <img src="https://i.ibb.co/0F4XSjc/Mvis-CBA-Logo.jpg" alt="MvisCBA Logo" class="logo">
+        <div class="title-container">
+            <h1>MvisCBA</h1>
+            <p class="subtitle">Multi-Modal Visualization System to Understand Customer Adverse Behavior</p>
+        </div>
     </div>
-  </div>
 </div>
 
 <div class="dataset-section">
-  <div class="container">
-    <div class="dataset-header">
-      <h2>Dataset Information</h2>
+    <div class="container">
+        <div class="dataset-header">
+            <h2>Dataset Information</h2>
+        </div>
+        <div class="dataset-container">
+            <div class="dataset-info">
+                <span class="dataset-label">Dataset</span>
+                <span class="dataset-content">Insurance Claims and Fraud Detection</span>
+            </div>
+            <div class="dataset-info">
+                <span class="dataset-label">Goal</span>
+                <span class="dataset-content">Predict fraudulent insurance claims</span>
+            </div>
+            <div class="dataset-info">
+                <span class="dataset-label">Size</span>
+                <span class="dataset-content">1,000 rows and 39 columns.</span>
+            </div>
+            <div class="dataset-info">
+                <span class="dataset-label">Analysis Type:</span>
+                <select name="analysisType" id="analysisType" class="dropdown">
+                    <option value="">--Please choose analysis--</option>
+                    <option value="https://public.tableau.com/app/profile/vishal.kukudala/viz/Descriptive_17125737295280/CustomerProfileAnalysis?publish=yes">Descriptive Analysis</option>
+                    <option value="https://www.tableau.com/academic/students">Predictive Analysis</option>
+                </select>
+            </div>
+            <div class="open-button-container">
+                <a href="" target="_blank" class="select-button-link">
+                    <button type="button" class="select-button" onclick="openSelectedAnalysis()">Open</button>
+                </a>
+            </div>
+        </div>
     </div>
-    <div class="dataset-container">
-      <div class="dataset-info">
-        <span class="dataset-label">Dataset</span>
-        <span class="dataset-content">Insurance Claims and Fraud Detection</span>
-      </div>
-      <div class="dataset-info">
-        <span class="dataset-label">Goal</span>
-        <span class="dataset-content">Predict fraudulent insurance claims</span>
-      </div>
-      <div class="dataset-info">
-        <span class="dataset-label">Size</span>
-        <span class="dataset-content">1,000 rows and 39 columns.</span>
-      </div>
-      <!-- Update: Direct link for the Open button -->
-      <a href="https://public.tableau.com/app/profile/vishal.kukudala/viz/DashDraft4_0/Multi-ModalVisualInteractiveSystem" target="_blank" class="select-button-link">
-        <button type="button" class="select-button">Open</button>
-      </a>
-    </div>
-  </div>
 </div>
 
 <footer>
@@ -50,6 +68,18 @@
     <a href="citation-link">Cite</a>
 </footer>
 
-<script src="script.js"></script>
+<script>
+    function openSelectedAnalysis() {
+        var selectedValue = document.getElementById("analysisType").value;
+        if (selectedValue) {
+            window.location.href = selectedValue;
+        }
+    }
+</script>
+
+</body>
+</html>
+<!-- partial -->
+  
 </body>
 </html>
