--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <select name="analysisType" id="analysisType" class="dropdown">
                     <option value="">--Please choose analysis--</option>
                     <option value="https://public.tableau.com/app/profile/vishal.kukudala/viz/Descriptive_17125737295280/CustomerProfileAnalysis?publish=yes">Descriptive Analysis</option>
-                    <option value="https://www.tableau.com/academic/students">Predictive Analysis</option>
+                    <option value="https://public.tableau.com/app/profile/vishal.kukudala/viz/Descriptive_17125737295280/MvisCBA">Predictive Analysis</option>
                 </select>
             </div>
             <div class="open-button-container">
