--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <span class="dataset-label">Analysis Type:</span>
                 <select name="analysisType" id="analysisType" class="dropdown">
                     <option value="">--Please choose analysis--</option>
-                    <option value="https://public.tableau.com/app/profile/vishal.kukudala/viz/Descriptive_17125737295280/CustomerProfileAnalysis?publish=yes">Descriptive Analysis</option>
-                    <option value="https://public.tableau.com/app/profile/vishal.kukudala/viz/Descriptive_17125737295280/MvisCBA">Predictive Analysis</option>
+                    <option value="https://public.tableau.com/app/profile/vishal.kukudala/viz/Mvis-CBADA/Mvis-CBA?publish=yes">Descriptive Analysis</option>
+                    <option value="https://public.tableau.com/app/profile/vishal.kukudala/viz/Mvis-CBAPA/MvisCBA#1">Predictive Analysis</option>
                 </select>
             </div>
             <div class="open-button-container">
