--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
 </div>
 
 <footer>
-    <a href="fullpaper.pdf" download>Full Paper</a>
-    <a href="code-repository-link">Code</a>
-    <a href="citation-link">Cite</a>
+    <a href="Prepared for Capstone Project" >
+    <a href="https://github.com/Khanrummana/MvisCBA.AIH.io">Introduction</a>
 </footer>
 
 <script>
