--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <footer>
     <a href="Prepared for Capstone Project" >
-    <a href="https://github.com/Khanrummana/MvisCBA.AIH.io">Introduction</a>
+    <a href="https://github.com/Khanrummana/MvisCBA.AIH.io">GitHub Readme</a>
 </footer>
 
 <script>
